--- a/sass/variables-site/_typography.scss
+++ b/sass/variables-site/_typography.scss
@@ -1,6 +1,6 @@
-$font__lato: 'Lato', sans-serif;
-$font__main: 'Lato', sans-serif;
-$font__secondary: 'Lato', sans-serif;
+$font__titles: 'Open Sans Condensed', sans-serif;
+$font__main: Georgia, "Times New Roman", Times, serif;
+$font__secondary: "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
 $font__code: Monaco, Consolas, "Andale Mono", "DejaVu Sans Mono", monospace;
 $font__pre: "Courier 10 Pitch", Courier, monospace;
 $font__line-height-body: 1.8em;
