--- a/sass/typography/_headings.scss
+++ b/sass/typography/_headings.scss
@@ -1,5 +1,5 @@
 h1, h2, h3, h4, h5, h6 {
-	font-family: $font__main;
+	font-family: $font__titles;
 	margin: 0 0 0.1em;	
 	line-height: normal;
 }
@@ -21,11 +21,11 @@ h1 {
 }
 
 h2 {
-	font-size: 1.6em
+	font-size: 1.7em
 }
 
 h3 {
-	font-size: 1.4em
+	font-size: 1.5em
 }
 
 h4 {
