--- a/sass/styles/hector.scss
+++ b/sass/styles/hector.scss
@@ -1,4 +1,11 @@
 /* header */
+.flag {
+	width: 17px;
+	-webkit-box-shadow: 0px 0px 3px 0px rgba(0,0,0,0.75);
+-moz-box-shadow: 0px 0px 3px 0px rgba(0,0,0,0.75);
+box-shadow: 0px 0px 3px 0px rgba(0,0,0,0.75);
+margin-right: 10px;
+}
 .iconwhite {
 	width: 18px;
 	margin: 0 7px 0 0;
@@ -416,7 +423,7 @@ padding-left: 55px;
 
 
 /*articulos*/
-.latest-articles {
+.featured-research {
 	background-color: #f4f4f4;
 }
 .seccion-articulos {
@@ -450,5 +457,17 @@ margin-top: 8px;
 	.bloque-articulo {
 		margin-top: 15px;
 		margin-bottom: 0; 
+	}
+	.bloque-articulo.research {
+		display: flex;
+		margin-bottom: 35px;
+		figure {
+			margin-top: 0;
+			width: 200px;
+			margin-right: 25px;
+			img {
+				min-width: 200px;
+			}
+		} 
 	}
 }
